     game chat.
   * Fixed a glitch where the Gryphon wing was drawn over the fog and
     reachmap
   * When moving up or down in a listbox with a horizontal scrollbar, the
     listbox no longer changes the position of the horizontal scrollbar
   * Added experimental new addon download dialog (Only available when
     starting with --new-widgets.)
   * Fix a broken reference to the Myrmidon portrait	 
 * WML Engine:
   * Fixed bug #13024: Conditional [allow_undo] not always working right
   * Map size is now hard-limited to 200 by 200
   * attribute hidden in [side] allows to hide a side from status table,
     it also can be changed by [modify_side] (FR #12814)
   * Removed support for PythonAI to handle CVE-2009-0367

Version 1.5.10:
 * Campaigns:
   * The South Guard:
     * Made 'Into the Depths' a bit easier
   * Under the Burning Suns:
     * fixed a major 1.5.7 regression with Kaleh's AMLAs, that made them
       useless after advancing him to L2 (rel. bug #12911)
     * fixed dehydration in scenario 2 triggering double-advancement for
       dehydrated units when leveling up (rel. bug #12911)
     * fixed some bad logic around the "Dust Devil dance" scene in scen.
       2.
     * made all human-controlled major characters unrenamable.
 * Graphics:
   * New or updated unit graphics: Elvish Enchantress, Orcish Slayer,
     Naga Fighter, Naga Myrmidon
   * New idle animations: Dwarvish Thunderer, Naga Fighter
   * New portrait for the Halberdier, dwarf Ulfserker line
   * Unit HP bar decrease progressively when unit gets hit
   * Rewrote the rendering engine which should fix the drawing order
 * Language and i18n:
   * new translations: Marathi
   * updated translations: British English, Dutch, French, German, Hungarian,
     Italian, Russian, Slovenian, Spanish, Swedish
 * Multiplayer:
   * Added support for observers to pause and continue the game at any time
   * Fixed bug #12896: Map generator does not sync between clients when